🕷️fix: z-index hierarchy

--- a/source/css/_layout/index.styl
+++ b/source/css/_layout/index.styl
@@ -110,4 +110,4 @@ if hexo-config("lightbox")
   .medium-zoom-overlay
     z-index 9
   .medium-zoom-image
-    z-index 9
+    z-index 10
