--- a/source/css/_widgets/_comment/twikoo.styl
+++ b/source/css/_widgets/_comment/twikoo.styl
@@ -14,8 +14,6 @@
         > a
           display none !important
 
-  z-index 102
-
 .tk-meta
   display flex
   align-items center
