--- a/source/css/_widgets/_post/pagination.styl
+++ b/source/css/_widgets/_post/pagination.styl
@@ -7,7 +7,7 @@
     width 300px
     bottom -100px
     right 20px
-    z-index 1000
+    z-index 7
     height fit-content
     transition cubic-bezier(.42, 0, .3, 1.11) .3s
     border var(--style-border)
